# Practice_with_web

Data_Base/: connection.py  create_table.py  insert_data.py  pyproject.toml  query_eight.sql  query_eleven.sql  query_five.sql  query_four.sql  query_nine.sql  query_one.sql  query_seven.sql  query_six.sql  query_ten.sql  query_three.sql  query_twelve.sql  query_two.sql  select_database.py
Django_project/: pyproject.toml
Django_project2.0/: pyproject.toml
Django_project2.0/quotes/: quotes.json
Django_project2.0/quotes/authors_app/: forms.py  urls.py  utils.py
Django_project2.0/quotes/authors_app/migrations/: 0002_alter_author_fullname.py
Django_project2.0/quotes/authors_app/templates/authors_app/: add_author.html  base.html  scrape_data_page.html  success_page.html
Django_project2.0/quotes/quotes/: settings.py  urls.py
Django_project2.0/quotes/quotes/utils/: migration.py
Django_project2.0/quotes/quotes_app/: forms.py  models.py  serializers.py  urls.py  views.py
Django_project2.0/quotes/quotes_app/migrations/: 0004_alter_quote_quote.py  0006_alter_quote_quote_alter_tag_name.py
Django_project2.0/quotes/quotes_app/static/quotes_app/: all_quotes.css  top_ten_tags.css
Django_project2.0/quotes/quotes_app/templates/quotes_app/: all_quotes.html  tag_quotes_list.html
Django_project2.0/quotes/user_app/: forms.py  urls.py  views.py
Django_project2.0/quotes/user_app/templates/user_app/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
FastAPI_app/: main.py  pyproject.toml
FastAPI_app2.0/: main.py  pyproject.toml
FastAPI_app3.0/: main.py  pyproject.toml
FastAPI_app3.0/migration/versions/: 1be084620b47_add_table_users.py
FastAPI_app3.0/postgres-data/: postmaster.pid
FastAPI_app3.0/postgres-data/base/16384/: 1247  1249  16385  16388  16390  16391  16403  16409  16411  2610  2620  2656  2657  2658  2659  2664  2665  2666  2667  2673  2678  2679  2703  3455  3501  3502  3534  pg_internal.init
FastAPI_app3.0/postgres-data/base/5/: pg_internal.init
FastAPI_app3.0/postgres-data/global/: 1260  1262  pg_control  pg_internal.init
FastAPI_app3.0/src/entity/: models.py
FastAPI_app3.0/src/repository/: contact.py  users.py
FastAPI_app3.0/src/routes/: auth.py  contact.py  users.py
FastAPI_app3.0/src/schemas/: contact.py  user.py
FastAPI_app3.0/src/services/: auth.py  email.py
FastAPI_app4.0/: .coverage  docker-compose.yml  main.py  pyproject.toml  test.db
FastAPI_app4.0/docs/: conf.py
FastAPI_app4.0/docs/_build/doctrees/: environment.pickle  index.doctree
FastAPI_app4.0/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
FastAPI_app4.0/docs/_build/html/_sources/: index.rst.txt
FastAPI_app4.0/migration/: env.py
FastAPI_app4.0/migration/versions/: 9109c5ab81cc_add_verify_for_user.py
FastAPI_app4.0/postgres-data/: postmaster.pid
FastAPI_app4.0/postgres-data/base/16384/: 1249  1259  16397  16399  16400  16401  16402  2224  2579  2604  2606  2608  2610  2662  2663  2674  2699  2701  2702  2704  3503  5002  pg_internal.init
FastAPI_app4.0/postgres-data/base/5/: pg_internal.init
FastAPI_app4.0/postgres-data/global/: 2671  pg_control  pg_internal.init
FastAPI_app4.0/src/conf/: config.py  messages.py
FastAPI_app4.0/src/database/: db.py
FastAPI_app4.0/src/repository/: contact.py  users.py
FastAPI_app4.0/src/routes/: auth.py  contact.py  users.py
FastAPI_app4.0/src/schemas/: user.py
FastAPI_app4.0/src/services/: auth.py  email.py
FastAPI_app4.0/src/services/templates/: reset_password.html
FastAPI_app4.0/tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_route_user.py  test_unit_repository_contact.py  test_unit_repository_users.py
MongoDB_Redis_RabbitMQ/: pyproject.toml
MongoDB_Redis_RabbitMQ/Mongo_Redis/: ask.py  dump.rdb  models.py  seed.py
MongoDB_Redis_RabbitMQ/RabbitMQ_Mongo/: consumer.py  consumer_email.py  consumer_sms.py  contact_model.py  producer.py
Pipenv_Docker/docker/: README.md
SQLAlchemy_Alembic/: CLI_seed.py  config.ini  my_select.py  pyproject.toml  seed.py
SQLAlchemy_Alembic/conf/: db.py  models.py
SQLAlchemy_Alembic/migrations/versions/: 883134cbae75_init.py  a0eb44595c6e_init.py  be25090323f2_init.py
UML_ABC/: AdressBookLogick.py  NotesLogick.py  SotedFileLogick.py  main.py
UML_ABC/UML/: UML.drawio
Web-scraping/: ask.py  authors.json  dump.rdb  main.py  models.py  pyproject.toml  seed.py
get_exchange_rate/: README.md  exchange_log.txt  main.py  pyproject.toml
get_exchange_rate/client/: server.py
(+47 files in other folders)
