[tool.poetry]
name = "mongodb-redis-rabbitmq"
version = "0.1.0"
description = "mongodb_redis_rabbitmq"
authors = ["Olga Tsuban <tsubanolga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.6.1"
redis = "^5.0.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^21.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
