[tool.poetry]
name = "get-exchange-rate"
version = "0.1.0"
description = "get_exchange_rate"
authors = ["Olga Tsuban <tsubanolga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.1"
websockets = "^12.0"
aiofile = "^3.8.8"
aiopath = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
